// Vitest Snapshot v1

exports[`transformFederatedRequire > properly overrides __require function 1`] = `
"import {
  app2_exports,
  init_app2
} from \\"./chunks/chunk-JQ36GDTN.js\\";
import \\"./chunks/chunk-RXKJD7WX.js\\";

// app1.jsx
var app2 = (init_app2(), app2_exports);
console.log(app2);
"
`;

exports[`transformFederatedRequire > properly overrides __require function 2`] = `
"import {
  App,
  init_app2
} from \\"./chunks/chunk-JQ36GDTN.js\\";
import \\"./chunks/chunk-RXKJD7WX.js\\";
init_app2();
export {
  App as default
};
"
`;

exports[`transformFederatedRequire > properly overrides __require function 3`] = `
"import {
  __esm,
  __export
} from \\"./chunk-RXKJD7WX.js\\";

// app2.jsx
var app2_exports = {};
__export(app2_exports, {
  default: () => App
});
function App() {
  console.log(app2);
}
var app2;
var init_app2 = __esm({
  \\"app2.jsx\\"() {
    app2 = (init_app2(), app2_exports);
  }
});

export {
  App,
  app2_exports,
  init_app2
};
"
`;

exports[`transformFederatedRequire > properly overrides __require function 4`] = `
"import { getModule } from \\"../federation-shared.js\\";
var __defProp = Object.defineProperty;

var __markAsModule = target => __defProp(target, \\"__esModule\\", {
  value: true
});

var __require = (req => mod => {
  if (mod.match(/@runtime\\\\/federation\\\\/(remote|shared)\\\\/(.+)/)) {
    return getModule(mod);
  }

  return req(mod);
})(x => {
  if (typeof require !== \\"undefined\\") return require(x);
  throw new Error('Dynamic require of \\"' + x + '\\" is not supported');
});

var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[Object.keys(fn)[0]])(fn = 0)), res;
};

var __export = (target, all) => {
  __markAsModule(target);

  for (var name in all) __defProp(target, name, {
    get: all[name],
    enumerable: true
  });
};

export { __require, __esm, __export };"
`;

exports[`transformFederatedRequire > properly overrides __require function in minified code 1`] = `
"import{b as o,c as p}from\\"./chunks/chunk-M7TSN5LG.js\\";import\\"./chunks/chunk-HCA46YCB.js\\";var e=(p(),o);console.log(e);
"
`;

exports[`transformFederatedRequire > properly overrides __require function in minified code 2`] = `
"import{a,c as b}from\\"./chunks/chunk-M7TSN5LG.js\\";import\\"./chunks/chunk-HCA46YCB.js\\";b();export{a as default};
"
`;

exports[`transformFederatedRequire > properly overrides __require function in minified code 3`] = `
"import{b as n,c as t}from\\"./chunk-HCA46YCB.js\\";var o={};t(o,{default:()=>p});function p(){console.log(a)}var a,e=n(()=>{a=(e(),o)});export{p as a,o as b,e as c};
"
`;

exports[`transformFederatedRequire > properly overrides __require function in minified code 4`] = `
"import { getModule } from \\"../federation-shared.js\\";
var d = Object.defineProperty;

var e = a => d(a, \\"__esModule\\", {
  value: !0
});

var f = (req => mod => {
  if (mod.match(/@runtime\\\\/federation\\\\/(remote|shared)\\\\/(.+)/)) {
    return getModule(mod);
  }

  return req(mod);
})(a => {
  if (typeof require != \\"undefined\\") return require(a);
  throw new Error('Dynamic require of \\"' + a + '\\" is not supported');
});

var g = (a, b) => () => (a && (b = a(a = 0)), b);

var h = (a, b) => {
  e(a);

  for (var c in b) d(a, c, {
    get: b[c],
    enumerable: !0
  });
};

export { f as a, g as b, h as c };"
`;
